--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -70,6 +70,9 @@
   * {
     @apply border-border;
   }
+  html {
+    font-size: 98.5%;
+  }
   body {
     @apply bg-background text-foreground;
   }
